[package]
authors = ["Afonso Bordado <afonsobordado@az8.co>"]
license-file = "LICENSE"
name = "nom_lua"
readme = "README.md"
version = "0.0.1"
repository = "https://github.com/afonso360/nom-lua"
documentation = "https://docs.rs/nom-lua/0.0.1/nom-lua"
homepage = "https://github.com/afonso360/nom-lua"
description = """
Lua 5.3 parser written in nom

This crate is licensed under the GPL v2 with a Linking Exception
See LICENSE for details
"""
keywords = ["nom", "lua", "parser"]

include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]


[dependencies]
nom = "^2.2"
hexf-parse = "0.1.0"

[lib]
crate-type = ["rlib", "dylib"]
name = "nom_lua"
