[package]
name = "nom-lua"
authors = ["Afonso Bordado <afonsobordado@az8.co>"]
# Bump version on README.md and src/lib.rs
version = "0.0.2"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/afonso360/nom-lua"
documentation = "https://docs.rs/nom-lua/"
homepage = "https://github.com/afonso360/nom-lua"
description = """
Lua 5.3 parser written in nom
"""
keywords = ["nom", "lua", "parser"]

include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "README.md",
]

[features]
graphviz = ["dot"]

[badges]
travis-ci = { repository = "afonso360/nom-lua" }
appveyor = { repository = "afonso360/nom-lua" }

[dependencies]
nom = "^3.2"
dot = { version = "^0.1", optional = true }

[dev-dependencies]
quickcheck = "^0.4"

[lib]
crate-type = ["rlib", "dylib"]
name = "nom_lua"

[[example]]
name = "graphviz"
required-features = ["graphviz"]
